# team-bot

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
src/team_bot/: bot.py  cli.py  commands.py  forwarding.py  main.py  pyinfra.py  relay.py  setup.py  util.py
src/team_bot/pyinfra_assets/: setup-venv.sh  team-bot.service.j2
src/teams_bot/: bot.py  cli.py  commands.py  pyinfra-deploy.py  pyinfra.py  teams-bot.profile  teams-bot.service.j2
src/teams_bot/pyinfra_assets/: setup-venv.sh  teams-bot.service.j2
tests/: conftest.py  test_bot.py  test_cli.py  test_commands.py
