[project]
name = "team-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deltachat-rpc-client>=2.36.0",
    "deltachat-rpc-server>=2.36.0",
    "qrcode>=8.2",
]

[project.scripts]
team-bot = "team_bot.main:main"

[tool.uv]
package = true
