[metadata]
name = teams-bot
version = 0.0.1
author = missytake
author_email = missytake@systemli.org
description = This bot connects your team to the outside and makes it addressable.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://git.0x90.space/missytake/teams-bot
project_urls =
    Bug Tracker = https://git.0x90.space/missytake/teams-bot/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: ISC License (ISCL)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    click
    pyinfra
    pickleDB
    qrcode
    deltachat

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    teams-bot = teams_bot.cli:main

[tox:tox]
envlist = lint, py310
isolated_build = True

[testenv:lint]
skip_install = True
deps =
    black
    flake8
commands =
    black --check --diff src tests
    flake8 src tests

[testenv]
passenv = *
deps =
    pytest
    pytest-xdist
    pytest-timeout
commands =
    pytest tests -n 6

[flake8]
max_line_length = 121
