[metadata]
name = team_bot
version = 1.1.0
author = missytake
author_email = missytake@systemli.org
description = This bot connects your team to the outside and makes it addressable.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/deltachat-bot/team-bot
project_urls =
    Bug Tracker = https://github.com/deltachat-bot/team-bot/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    click
    pyinfra
    pickleDB
    qrcode
    deltachat>=1.136.2

[options.extras_require]
dev =
    pytest
    tox
    black
    pytest-xdist
    pytest-timeout

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    team-bot = team_bot.cli:main

[tox:tox]
envlist = lint, py310
isolated_build = True

[testenv:lint]
skip_install = True
deps =
    black
    flake8
commands =
    black --check --diff src tests
    flake8 src tests

[testenv]
passenv = *
deps =
    pytest
    pytest-xdist
    pytest-timeout
commands =
    pytest tests -n 6

[flake8]
max_line_length = 121
